# splat

./: .dockerignore  .gitignore  .mise.toml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.dev  Makefile  Pipfile  README.md  docker-compose.yml  lambda_function.py  lambda_requirements.txt  pyproject.toml  release-please-config.json  splat_cli.py  tasks.py
.github/workflows/: ci.yaml  ci.yml  publish.yaml  publish.yml  release-please.yaml  test.yml
html2pdf/: lambda_function.py
scripts/: local.py
splat/: lambda_function.py
tests/: font-disabled.html  test_lambda_e2e.py  utils.py
uptick_splat/: __init__.py  config.py  exceptions.py  logging.py  utils.py
