[tool.poetry]
name = "uptick-splat"
version = "0.1.5"
description = "Django library for invoking splat"
authors = ["william chu <william.chu@uptickhq.com>"]
readme = "README.md"
packages = [{ include = "uptick_splat" }]

[tool.poetry.dependencies]
python = "^3.9"
django = ">=3.1, <5.0.0"
boto3 = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
