[tool.poetry]
name = "uptick-splat"
version = "0.1.8"
description = "Django library for invoking splat"
authors = ["william chu <william.chu@uptickhq.com>"]
readme = "README.md"
packages = [{ include = "uptick_splat" }]

[tool.poetry.dependencies]
python = "^3.9"
django = ">=3.1, <5.0.0"
boto3 = "*"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ruff = "^0.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]

# Exclude a variety of commonly ignored directories.
line-length = 120

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "api_client",
]


# Assume Python 3.10.
target-version = "py311"

[tool.ruff.lint]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

ignore = [
    "E501", # Line length is done by black
    "D202", # NoBlankLineAfterFunction
    "S101", # Use of `assert` detected
    "S106", # Ignore secrets
    "B008", # Do not perform function call. Lots of false positives with typer.Option
]

# Enable Pyflakes `E` and `F` codes by default.
select = [
    "F",   # Pyflakes
    "E",   # Pycodestyle
    "W",   # Pycodestyle
    "C90", # Mccabe complexity
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "S",   # bandit (security)
    "DTZ", # Enforce good datetime
    "BLE", # Blind exceptions
    "I",   # isort
]
